--- a/platforms/android/eeuiApp/app/src/main/AndroidManifest.xml
+++ b/platforms/android/eeuiApp/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:extractNativeLibs="true"
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
